# dump-it

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: brand.rs  chrome.rs  cli.rs  contact.rs  extract.rs  main.rs  model.rs  output.rs  scrape.rs  selectors.rs  util.rs
