[package]
name = "dump-it"
version = "0.1.0"
edition = "2021"
authors = ["Vojtěch Kotrč"]
description = "High-performance website scraper with sitemap support and intelligent crawling"
license = "MIT"
repository = "https://github.com/lordvojta/dump-it"
keywords = ["scraper", "crawler", "web", "sitemap", "cli"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
futures = "0.3"
sha2 = "0.10"
headless_chrome = "1.0"
regex = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "ico"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
